# tgcd

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  build.rs  default_config.toml  docker-compose.yml  shell.nix
.cargo/: config
proto/: tgcd.proto
sql/: schema.sql
src/: client.rs  config.rs  data.rs  lib.rs  main.rs
tgc/: Cargo.toml
tgc/src/: main.rs
tgcd/: .gitignore  Cargo.toml  build.rs
tgcd-server/: Cargo.toml
tgcd-server/src/: main.rs
tgcd/src/: client.rs
