[package]
name = "tgcd"
version = "0.1.0"
authors = ["foldu <foldu@protonmail.com>"]
edition = "2018"
license = "Unlicense OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["client", "server"]
client = ["structopt", "serde_json", "rayon"]
server = ["log", "env_logger", "envy", "tokio-postgres"]

[dependencies]
tokio = { version = "0.2.6", features = ["rt-threaded", "fs"] }
prost = "0.5.0"
futures-util = "0.3.1"
bytes = "0.4"
thiserror = "1.0.9"
blake2b_simd = "0.5.9"
hex = "0.4.0"
tokio-postgres = { version = "0.5.0-alpha.2", optional = true }
envy = { version = "0.4.0", optional = true }
serde = { version = "1.0.104", features = ["derive"] }
log = { version = "0.4.8", optional = true }
env_logger = { version = "0.7.1", default-features = false, features = ["humantime"], optional = true }
structopt = { version = "0.3.5", optional = true }
rayon = { version = "1.2.1", optional = true }
serde_json = { version = "1.0.44", optional = true }
directories = "2.0.2"
url = { version = "2.1.0", features = ["serde"] }
toml = "0.5.5"
tonic = "0.1.0-beta.1"
deadpool-postgres = "0.4.0"
refinery = { version = "0.2.0-alpha.2", features = ["tokio-postgres"] }
refinery-migrations = "0.2.0-alpha.2"

[build-dependencies]
tonic-build = "0.1.0-beta.1"

[[bin]]
name = "tgcd"
path = "src/bin/server.rs"
required-features = ["server"]

[[bin]]
name = "tgc"
path = "src/bin/client.rs"
required-features = ["client"]
