[package]
name = "tgcd"
version = "0.1.0"
authors = ["foldu <foldu@protonmail.com>"]
edition = "2018"
license = "Unlicense OR MIT"

[dependencies]
tokio = { version = "0.2.16", features = ["rt-threaded", "fs"] }
prost = "0.6.1"
futures-util = "0.3.4"
thiserror = "1.0.14"
blake2b_simd = "0.5.10"
hex = "0.4.2"
serde = { version = "1.0.106", features = ["derive"] }
directories = "2.0.2"
url = { version = "2.1.1", features = ["serde"] }
toml = "0.5.6"
tonic = "0.2.0"

[build-dependencies]
tonic-build = { version = "0.2.0", default-features = false }
